# quack2d

./: CMakeLists.txt  README.md
quack2d/: CMakeLists.txt
quack2d/include/: quack2d.hpp  quack2d_game.hpp  quack2d_prereqs.hpp  quack2d_window.hpp
quack2d/src/: quack2d_game.cpp
quack2d/src/graphics/: CMakeLists.txt
quack2d/src/input/: CMakeLists.txt
quack2d/src/window/: CMakeLists.txt  quack2d_window.cpp
quack2d/tests/: CMakeLists.txt
test_game/: CMakeLists.txt
test_game/src/: main.cpp
